Fix spacing to match sample image better

--- a/style.css
+++ b/style.css
@@ -19,8 +19,16 @@ div {
     padding-bottom: 50px;
 }
 
+.nav-wrapper {
+    display: block;
+    width: 800px;
+    margin: auto;
+}
+
 .navbar {
-    justify-content: space-around;
+    justify-content: space-between;
+    display:flex;
+    padding-bottom: 50px;
 }
 
 .header-logo {
@@ -53,7 +61,6 @@ div {
 }
 
 .splash-text {
-    padding: 30px;
     flex-direction: column;
 }
 
@@ -66,12 +73,14 @@ div {
 }
 
 .placeholder-image {
-    background-color: gray;
-    color: white;
     align-items: center;
-    max-width: 800px;
-    max-height: 400px;
     justify-content: center;
+    padding-left: 30px;
+}
+
+.placeholder-image img {
+    width: 400px;
+    height: auto;
 }
 
 button {
